Mapa BASE IDECA teselas mismo que (mapas.bogota.gov.co)

--- a/app/index.html
+++ b/app/index.html
@@ -409,7 +409,7 @@
   <div id="menu">
     <!-- https://design.google.com/icons -->
     <div id="btnP1" title="Medición" class="btn-nav-pane fixed-action-btn horizontal click-to-toggle customBtnMedicion">
-      <a class="btn-floating btn-small teal" onclick="mapTools.turnOffMeasure()"><i class="material-icons">gesture</i></a>
+      <a class="btn-floating btn-small teal" onclick="mapTools.turnOffMeasure();"><i class="material-icons">gesture</i></a>
       <ul class="btnHorizontal">
         <li><a title="Longitud (Linea)" class="btn-floating yellow darken-1" onclick="mapTools.changeMeasure('length');"><i class="material-icons">share</i></a></li>
         <li><a title="Area (Polígono)" class="btn-floating green" onclick="mapTools.changeMeasure('area');"><i class="material-icons">signal_cellular_null</i></a></li>
