--- a/app/spagoBI-rest-test.html
+++ b/app/spagoBI-rest-test.html
@@ -8,6 +8,8 @@
 
 <body>
 
+	<div id="myTable"></div>
+
 	<script src="lib/jquery/dist/jquery.js" type="text/javascript"></script>
 
 	<script type="text/javascript">
@@ -29,33 +31,30 @@
 						cargarDatos(xhr.getResponseHeader('_Set-Cookie'));
 					},
 					error: function(err) {
-						console.log("error", err);
+						console.log('error', err);
 					},
 				})
 				.always(function() {
-					console.log("complete");
+					console.log('complete');
 				});
 		}
 
-		iniciar();
-
+		this.iniciar();
 
 		this.cargarDatos = function(cookie) {
 
-			var url = "https://intelligentia.udistrital.edu.co:8443/SpagoBI/restful-services/1.0/datasets/DSEspFis/data";
+			var url = 'https://intelligentia.udistrital.edu.co:8443/SpagoBI/restful-services/1.0/datasets/DSEspFis/data';
 
 			var parameters = {
 				facultad: 33,
 				semestre: 1,
-				anno: 2016
+				anno: 2015
 			}
-			var data = {
-				parameters: encodeURI(JSON.stringify(parameters))
-			}
+			parameters = escape(JSON.stringify(parameters));
 
 			headers = 'Cookie:' + cookie;
 
-			url = 'https://intelligentia.udistrital.edu.co:8443/SpagoBI/restful-services/1.0/datasets/DSEspFis/data?parameters=%7B%22facultad%22%3A%2233%22%2C%22semestre%22%3A%221%22%2C%22anno%22%3A%222016%22%7D';
+			url = 'https://intelligentia.udistrital.edu.co:8443/SpagoBI/restful-services/1.0/datasets/DSEspFis/data?parameters=' + parameters;
 			url = '/proxy/?headers=' + escape(headers) + '&url=' + escape(url);
 
 			$.ajax({
@@ -63,36 +62,47 @@
 					method: 'GET',
 					dataType: 'json',
 				}).done(function(result) {
-					console.log("second success");
-					console.log(result);
-					window.result = result;
+					console.log('second success');
+					mostarEnTabla(result);
 				})
 				.fail(function(e) {
-					console.log("error", e);
+					console.log('error', e);
 				})
 				.always(function() {
-					console.log("complete");
+					console.log('complete');
 				});
 		}
 
-
-		function getCookie(cname) {
-			var name = cname + "=";
-			var decodedCookie = decodeURIComponent(document.cookie);
-			var ca = decodedCookie.split(';');
-			for (var i = 0; i < ca.length; i++) {
-				var c = ca[i];
-				while (c.charAt(0) == ' ') {
-					c = c.substring(1);
-				}
-				if (c.indexOf(name) == 0) {
-					return c.substring(name.length, c.length);
-				}
+		this.mostarEnTabla = function(spagoBIresponse) {
+			console.log(spagoBIresponse);
+			var thead = $('<thead><tr></tr></thead>');
+			var fields = spagoBIresponse.metaData.fields;
+			for (var i = 0; i < fields.length; i++) {
+				var field = fields[i];
+				var th = $('<th>' + field.header + '</th>');
+				thead.append(th);
 			}
-			return "";
+			var tbody = $('<tbody></tbody>');
+			var rows = spagoBIresponse.rows;
+
+			for (var i = 0; i < rows.length; i++) {
+				var row = rows[i];
+				var tr = $('<tr></tr>');
+				for (var variable in row) {
+					if (row.hasOwnProperty(variable)) {
+						var columnValue = row[variable];
+						var td = $('<td>'+columnValue+'</td>');
+						tr.append(td);
+					}
+				}
+				tbody.append(tr);
+			}
+
+			var table = $('#myTable');
+			table.append(thead);
+			table.append(tbody);
 		}
 	</script>
-
 
 </body>
 
