Se arregla problema al desplegar en nginx (por redirección)

--- a/app/spagoBI-rest-test.html
+++ b/app/spagoBI-rest-test.html
@@ -54,7 +54,7 @@
 			url = url + '?parameters=' + parameters;
 
 			var headers = 'Cookie:' + cookie;
-			url = '/proxy/?headers=' + escape(headers) + '&url=' + escape(url);
+			url = '/proxy?headers=' + escape(headers) + '&url=' + escape(url);
 
 
 			$.ajax({
