Primer acercamiento gráficas a partir de SPAGOBI.

--- a/app/index.html
+++ b/app/index.html
@@ -289,14 +289,14 @@
               <div class="card-content">
                 <div id="contenido-charts">
                   <div id="select-chart">
-                    <select onchange="graficarPie(this.value);">
+                    <select onchange="autenticar()">
                       <option value="" selected="selected" disabled="disabled">Seleccione una gráfica.</option>
-                      <option value="">Reportes de Ocupación de las Aulas y Laboratorios de la Universidad</option>
-                      <option value="">Reportes de asignación de los espacios de acuerdo a la Dependencia</option>
-                      <option value="">Reporte Histórico Recursos Invertidos por Sede</option>
-                      <option value="">Perfiles de Ocupación de las sedes según franjas horarias</option>
-                      <option value="">Lugar de procedencia de los Estudiantes (Localidad, sector catastral, CHIP predial)</option>
-                      <option value="">Localidad de procedencia de los docentes </option>
+                      <option value="">Reportes de Ocupación de las Aulas y Laboratorios de la Universidad (En desarrollo)</option>
+                      <option value="">Reportes de asignación de los espacios de acuerdo a la Dependencia (En desarrollo)</option>
+                      <option value="">Reporte Histórico Recursos Invertidos por Sede (En desarrollo)</option>
+                      <option value="">Perfiles de Ocupación de las sedes según franjas horarias (En desarrollo)</option>
+                      <option value="">Lugar de procedencia de los Estudiantes (Localidad, sector catastral, CHIP predial) (En desarrollo)</option>
+                      <option value="">Localidad de procedencia de los docentes (En desarrollo)</option>
                     </select>
                   </div>
                   <!-- end #select-chart -->
@@ -462,6 +462,7 @@
   <script src="lib/openlayers/js/ol.js" type="text/javascript"></script>
   <script src="lib/jsts/jsts.min.js" type="text/javascript"></script>
   <script src="lib/chart.js/js/Chart.bundle.js" type="text/javascript"></script>
+  <script src="lib/SpagoBI-SDK/sbisdk-all-production.js" type="text/javascript"></script>
   <script src="js/createMap.js" type="text/javascript"></script>
   <script src="js/mapTools.js" type="text/javascript"></script>
   <script src="js/queries.js" type="text/javascript"></script>
