--- a/app/index.html
+++ b/app/index.html
@@ -306,7 +306,7 @@
                   <!-- end #canvas-holder -->
                   <div id="ver-en-mapa">
                     <!-- Colored raised button -->
-                    <button type="button" class="btn waves-effect waves-light blue" type="submit" onclick="generalReport.validateData(event);">
+                    <button type="button" class="btn waves-effect waves-light blue" type="submit" onclick="window.addChartDataToMap();">
                       Ver en Mapa
                     </button>
                     <button type="button" class="btn waves-effect waves-light red" type="submit" onclick="generalReport.validateData(event);">
@@ -463,6 +463,7 @@
   <script src="lib/jsts/jsts.min.js" type="text/javascript"></script>
   <script src="lib/chart.js/js/Chart.bundle.js" type="text/javascript"></script>
   <script src="lib/SpagoBI-SDK/sbisdk-all-production.js" type="text/javascript"></script>
+  <script src="lib/Qix-/color/color.js" type="text/javascript"></script>
   <script src="js/createMap.js" type="text/javascript"></script>
   <script src="js/mapTools.js" type="text/javascript"></script>
   <script src="js/queries.js" type="text/javascript"></script>
