Se llenan selects con DataSets spagoBI.

--- a/app/index.html
+++ b/app/index.html
@@ -300,6 +300,9 @@
                     </select>
                   </div>
                   <!-- end #select-chart -->
+                  <div id="form-chart">
+                  </div>
+                  <!-- end #form-chart -->
                   <div id="canvas-holder" style="width:100%">
                     <canvas id="chart-area" />
                   </div>
