--- a/app/index.html
+++ b/app/index.html
@@ -320,6 +320,22 @@
                     </button> -->
                   </div>
                   <!-- end .input-field .col .s12 -->
+                  <div id="loading-reports" class="input-field col s12" style="display: none;">
+                    <b><div id="loading-reports-message"></div></b>
+                    <div class="preloader-wrapper big active">
+                      <div class="spinner-layer spinner-green-only">
+                        <div class="circle-clipper left">
+                          <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                          <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                          <div class="circle"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                   <div id="canvas-holder" style="width:100%">
                     <canvas id="chart-area" />
                   </div>
