Se agregan colores al mapa por verificar.

--- a/app/index.html
+++ b/app/index.html
@@ -283,13 +283,13 @@
           <div class="col s12">
             <div class="card teal lighten-5">
               <div class="card-content">
-                <span class="card-title">Reportes (En desarrollo, NO funcional)</span>
+                <span class="card-title">Reportes</span>
               </div>
               <!-- end .card-content -->
               <div class="card-content">
                 <div id="contenido-charts">
                   <div id="select-chart">
-                    <select onchange="reports.authenticate(reports.getReports()[0]);">
+                    <select onchange="reports.changeSelectChart();">
                       <option value="" selected="selected" disabled="disabled">Seleccione una gráfica.</option>
                       <option value="">Reportes de Ocupación de las Aulas y Laboratorios de la Universidad (En desarrollo)</option>
                       <option value="">Reportes de asignación de los espacios de acuerdo a la Dependencia (En desarrollo)</option>
