Se agrega filtro de capa.

--- a/app/index.html
+++ b/app/index.html
@@ -331,6 +331,9 @@
                     <canvas id="chart-area" />
                   </div>
                   <!-- end #canvas-holder -->
+                  <div id="chart-map-filters" class="input-field col s12">
+                  </div>
+                  <!-- end #chart-map-filters .input-field .col .s12 -->
                   <div id="ver-en-mapa">
                     <!-- Colored raised button -->
                     <button type="button" class="btn waves-effect waves-light blue" type="submit" onclick="reports.addChartDataToMap();">
