Botón ir a reporte SPAGOBI

--- a/app/index.html
+++ b/app/index.html
@@ -302,6 +302,13 @@
                   </div>
                   <!-- end .input-field .col .s12 -->
                   <div class="input-field col s12">
+                    <button type="button" class="btn waves-effect waves-light" type="submit" onclick="reports.openSpagobiLinkReport();">
+                      Abrir en SPAGOBI
+                      <i class="material-icons right">send</i>
+                    </button>
+                  </div>
+                  <!-- end .input-field .col .s12 -->
+                  <div class="input-field col s12">
                     <div id="criteria-chart">
                     </div>
                     <!-- end #criteria-chart -->
