--- a/app/index.html
+++ b/app/index.html
@@ -443,6 +443,13 @@
   </div>
   <!-- end #popup -->
 
+  <ul id="poweredby">
+    <li>
+      <img src="css/img/escudo_oficial_udistrital_128x128.png" />
+    </li>
+  </ul>
+  <!-- end #popup -->
+
   <!-- Menu -->
   <div id="menu">
     <!-- https://design.google.com/icons -->
